--- a/ais/lab4/ddpm2.ipynb
+++ b/ais/lab4/ddpm2.ipynb
@@ -1,6 +1,14 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "id": "d8142399",
+      "metadata": {},
+      "source": [
+        "# Терешенков БВТ2203. Лаб. работа №4. Реализация DDPM для датасета MNIST"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "id": "f3876590",
