--- a/ais/lab5/autoregression_pixelcnn.ipynb
+++ b/ais/lab5/autoregression_pixelcnn.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Терешенков БВТ2203. Лаб. работа №5. Авторегрессионная модель PixelCNN для датасета Fashion MNIST"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
